envoy/envoy-go.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

# envoy demo with golang extension enabled
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          http_filters:
          - name: envoy.filters.http.golang
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.golang.v3alpha.Config
              library_id: simple-auth
              library_path: "lib/simple-auth.so"
              plugin_name: simple-auth
              plugin_config:
                "@type": type.googleapis.com/xds.type.v3.TypedStruct
                value:
                  auth_api_key: "12345-0"
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: local_route
            virtual_hosts:
            - name: report_service
              domains: ["report.rashpile.net"]
              routes:
              - match:
                  prefix: "/"
                route:
                  host_rewrite_literal: report.rashpile.net
                  cluster: service_report_app
            - name: gitea_service
              domains: ["gitea.rashpile.net"]
              routes:
              - match:
                  prefix: "/"
                route:
                  host_rewrite_literal: gitea.rashpile.net
                  cluster: service_gitea_app



  clusters:
  - name: service_report_app
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: service_report_app
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: report-app
                port_value: 3000
  - name: service_gitea_app
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: service_gitea_app
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: gitea
                port_value: 3000
